# Image-processor

./: CMakeLists.txt  README.md  image_format.h  image_processor.cpp
console_parser/: console_parser.cpp
file_handler/: bmp.cpp  bmp.h
filters/: blur.cpp  blur.h  crop.cpp  crop.h  edge_detection.cpp  edge_detection.h  filter.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
utility/: color.cpp  color.h  image.cpp  image.h
